--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
           rel="stylesheet">
     <title>React App</title>
 
-     <!-- Start Single Page Apps for GitHub Pages -->
+     <!-- Start Single Page Apps for GitHub Pages
      <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
@@ -55,7 +55,7 @@
           );
         }
       }(window.location))
-    </script>
+    </script> -->
   </head>
   <body>
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
