--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- Used this reference for changing out tab icon
+    https://stackoverflow.com/questions/51173765/how-to-add-favicon-to-react-application-browser-tab-duplicate -->
+    <link rel="icon" href="%PUBLIC_URL%/SquidIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/SquidIcon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -28,10 +30,9 @@
     <!-- https://www.geeksforgeeks.org/how-to-use-google-fonts-in-reactjs/ -->
     <link rel=”preconnect” href=”https://fonts.googleapis.com”>
     <link rel=”preconnect” href=”https://fonts.gstatic.com” crossorigin>
-    <link href=
-"https://fonts.googleapis.com/css2?family=Itim"
+    <link href="https://fonts.googleapis.com/css2?family=Itim"
           rel="stylesheet">
-    <title>React App</title>
+    <title>Moji Match</title>
 
   </head>
   <body>
